--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -21,7 +21,9 @@ body,p,h1,h2,h3,h4,h5,h6 {
 a {
     color: $zest;
     font-weight: 700;
-    &:hover {
+    &:hover,
+    &:focus,
+    &:visited {
         color: darken($zest, 20%);
     }
 }
