Add sponsors we appreciate -Fix bug on logomark on narrow mobile devices -Compress css

--- a/css/styles.css
+++ b/css/styles.css
@@ -2,235 +2,4 @@
  * Toledo Web Professionals
  * Code licensed under the Apache License v2.0.
  * For details, see http://www.apache.org/licenses/LICENSE-2.0.
- */
-@import url(../fonts/fonts.css);
-body,
-html {
-  width: 100%;
-  height: 100%; }
-
-body, p, h1, h2, h3, h4, h5, h6 {
-  font-family: "Museo300Regular","Helvetica Neue",Helvetica,Arial,sans-serif;
-  font-weight: 300;
-  color: #403438; }
-
-a {
-  color: #E7801D;
-  font-weight: 700; }
-  a:hover, a:focus, a:visited {
-    color: #8f4e0f; }
-
-.btn {
-  border-radius: 0;
-  border: 1px solid #403438; }
-  .btn .fa-fw {
-    color: #E7801D; }
-  .btn:hover {
-    background-color: #f3f0f1;
-    transition: all .5s ease-in-out;
-    border: 1px solid #403438;
-    box-shadow: inset 0 0 10px #5c4b51; }
-
-.navbar-default {
-  background-color: #dad4ce;
-  box-shadow: 0px 4px 8px -2px rgba(82, 72, 61, 0.7); }
-  .navbar-default .navbar-toggle {
-    border-color: white;
-    background-color: #c5bbb1; }
-    .navbar-default .navbar-toggle:focus, .navbar-default .navbar-toggle:hover {
-      background-color: #E7801D;
-      transition: all .5s ease-in-out; }
-    .navbar-default .navbar-toggle .icon-bar {
-      background-color: white; }
-  .navbar-default .navbar-nav > li > a {
-    font-family: "Museo700Regular","Helvetica Neue",Helvetica,Arial,sans-serif;
-    font-weight: 700;
-    font-size: 16px;
-    color: #E7801D; }
-    .navbar-default .navbar-nav > li > a:hover {
-      color: #8f4e0f; }
-
-.navbar-brand {
-  font-family: "Museo700Regular","Helvetica Neue",Helvetica,Arial,sans-serif;
-  font-weight: 700;
-  font-size: 36px;
-  letter-spacing: -2px;
-  padding: 10px 15px 8px 15px;
-  width: 175px;
-  color: #403438; }
-  .navbar-brand:hover {
-    color: #080607; }
-  .navbar-brand .logomark {
-    width: 70px;
-    float: left;
-    margin-right: 10px;
-    margin-top: -7px; }
-
-.lead {
-  font-size: 18px;
-  font-weight: 400; }
-
-.figure {
-  margin-top: 10px; }
-  .figure .talk {
-    font-style: italic; }
-
-.intro-header {
-  padding-top: 50px;
-  /* Protects navbar from overlapping content. */
-  padding-bottom: 50px;
-  text-align: center;
-  color: #F7941E;
-  background: url(../img/unsplash3.jpg) no-repeat center center;
-  background-size: cover; }
-  .intro-header h3 {
-    color: #eeebec; }
-
-.intro-social-buttons li {
-  margin-bottom: 10px; }
-
-.intro-message {
-  position: relative;
-  padding-top: 20%;
-  padding-bottom: 20%; }
-  .intro-message > h1 {
-    margin: 0;
-    text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.5);
-    font-size: 5em;
-    color: #F7941E; }
-  .intro-message > h3 {
-    text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.5);
-    padding: 0 60px;
-    text-align: left; }
-
-.intro-divider {
-  max-width: 400px;
-  border-top: 1px solid #E7801D;
-  border-bottom: 2px solid rgba(0, 0, 0, 0.4); }
-
-.benefits {
-  margin-bottom: 30px;
-  list-style-type: square; }
-  .benefits li {
-    font-size: 16px; }
-
-.levels {
-  margin-top: 125px; }
-
-.hang {
-  position: relative;
-  list-style: none; }
-  .hang.refresh {
-    font-family: FontAwesome; }
-    .hang.refresh:before {
-      content: "\f0f4";
-      position: absolute;
-      top: -10px;
-      left: -41px;
-      font-size: 30px;
-      color: #E7801D; }
-  .hang.space {
-    font-family: FontAwesome; }
-    .hang.space:before {
-      content: "\f0f7";
-      position: absolute;
-      top: -10px;
-      left: -36px;
-      font-size: 30px;
-      color: #E7801D; }
-  .hang.premiere {
-    font-family: FontAwesome; }
-    .hang.premiere:before {
-      content: "\f135";
-      position: absolute;
-      top: -10px;
-      left: -41px;
-      font-size: 30px;
-      color: #E7801D; }
-
-.go-top {
-  margin: 0;
-  position: fixed;
-  bottom: 6px;
-  right: 6px;
-  color: rgba(231, 128, 29, 0.8); }
-  .go-top:hover {
-    color: #e7801d; }
-  .go-top .fixed-btn {
-    font-size: 50px; }
-
-.network-name {
-  text-transform: uppercase;
-  font-size: 14px;
-  font-weight: 400;
-  letter-spacing: 2px; }
-
-.section-a {
-  padding: 50px 0;
-  background-color: #f0eeeb; }
-
-.section-b {
-  padding: 50px 0;
-  border-top: 1px solid #baaea2;
-  border-bottom: 1px solid #baaea2; }
-
-.section-heading {
-  margin-bottom: 30px; }
-
-.section-heading-spacer {
-  float: left;
-  width: 200px;
-  border-top: 4px solid #E7801D; }
-
-.banner {
-  padding: 100px 0;
-  text-align: center;
-  color: #eeebec;
-  background: url(../img/unsplash4.png) no-repeat center center;
-  background-size: cover; }
-  .banner h2 {
-    margin: 0;
-    text-shadow: 2px 2px 3px rgba(64, 52, 56, 0.7);
-    font-size: 3em;
-    color: #F7941E; }
-  .banner ul {
-    margin-bottom: 0; }
-
-.banner-social-buttons {
-  float: right;
-  margin-top: 0; }
-
-footer {
-  padding: 50px 0;
-  background-color: #e5e1dc; }
-  footer .list-inline {
-    text-align: center; }
-
-.copyright {
-  margin: 15px 0 0;
-  text-align: center; }
-
-@media (max-width: 767px) {
-  .intro-message > h1 {
-    font-size: 3em; }
-  .intro-message > h3 {
-    padding: 0; }
-
-  .banner h2 {
-    margin: 0;
-    text-shadow: 2px 2px 3px rgba(64, 52, 56, 0.7);
-    font-size: 3em; }
-
-  .banner-social-buttons > li {
-    display: block;
-    margin-bottom: 20px;
-    padding: 0; }
-
-  .banner-social-buttons > li:last-child {
-    margin-bottom: 0; }
-
-  .section-heading-spacer {
-    display: none; }
-
-  .levels {
-    margin-top: 30px; } }
+ */@import url(../fonts/fonts.css);body,html{width:100%;height:100%}body,p,h1,h2,h3,h4,h5,h6{font-family:"Museo300Regular","Helvetica Neue",Helvetica,Arial,sans-serif;font-weight:300;color:#403438}a{color:#E7801D;font-weight:700}a:hover,a:focus,a:visited{color:#8f4e0f}.btn{border-radius:0;border:1px solid #403438}.btn .fa-fw{color:#E7801D}.btn:hover{background-color:#f3f0f1;-webkit-transition:all .5s ease-in-out;transition:all .5s ease-in-out;border:1px solid #403438;box-shadow:inset 0 0 10px #5c4b51}.navbar-default{background-color:#dad4ce;box-shadow:0px 4px 8px -2px rgba(82,72,61,0.7)}.navbar-default .navbar-toggle{border-color:white;background-color:#c5bbb1}.navbar-default .navbar-toggle:focus,.navbar-default .navbar-toggle:hover{background-color:#E7801D;-webkit-transition:all .5s ease-in-out;transition:all .5s ease-in-out}.navbar-default .navbar-toggle .icon-bar{background-color:white}.navbar-default .navbar-nav>li>a{font-family:"Museo700Regular","Helvetica Neue",Helvetica,Arial,sans-serif;font-weight:700;font-size:16px;color:#E7801D}.navbar-default .navbar-nav>li>a:hover{color:#8f4e0f}.navbar-brand{font-family:"Museo700Regular","Helvetica Neue",Arial,sans-serif;font-weight:700;font-size:36px;letter-spacing:-2px;padding:10px 15px 8px 15px;width:175px;color:#403438}.navbar-brand:hover{color:#080607}.navbar-brand .logomark{width:70px;float:left;margin-right:10px;margin-top:-7px}.lead{font-size:18px;font-weight:400}.figure{margin-top:10px}.figure .talk{font-style:italic}.intro-header{padding-top:50px;padding-bottom:50px;text-align:center;color:#F7941E;background:url(../img/unsplash3.jpg) no-repeat center center;background-size:cover}.intro-header h3{color:#eeebec}.intro-social-buttons li{margin-bottom:10px}.intro-message{position:relative;padding-top:20%;padding-bottom:20%}.intro-message>h1{margin:0;text-shadow:2px 2px 3px rgba(0,0,0,0.5);font-size:5em;color:#F7941E}.intro-message>h3{text-shadow:2px 2px 3px rgba(0,0,0,0.5);padding:0 60px;text-align:left}.intro-divider{max-width:400px;border-top:1px solid #E7801D;border-bottom:2px solid rgba(0,0,0,0.4)}.break{border-top:1px solid #462703;border-bottom:0}.benefits{margin-bottom:30px;list-style-type:square}.benefits li{font-size:16px}.levels{margin-top:125px}.hang{position:relative;list-style:none}.hang.refresh{font-family:FontAwesome}.hang.refresh:before{content:"\f0f4";position:absolute;top:-10px;left:-41px;font-size:30px;color:#E7801D}.hang.space{font-family:FontAwesome}.hang.space:before{content:"\f0f7";position:absolute;top:-10px;left:-36px;font-size:30px;color:#E7801D}.hang.premiere{font-family:FontAwesome}.hang.premiere:before{content:"\f135";position:absolute;top:-10px;left:-41px;font-size:30px;color:#E7801D}.go-top{margin:0;position:fixed;bottom:6px;right:6px;color:rgba(231,128,29,0.8)}.go-top:hover{color:#e7801d}.go-top .fixed-btn{font-size:50px}.network-name{text-transform:uppercase;font-size:14px;font-weight:400;letter-spacing:2px}.section-a{padding:50px 0;background-color:#f0eeeb}.section-b{padding:50px 0;border-top:1px solid #baaea2;border-bottom:1px solid #baaea2}.section-heading{margin-bottom:30px}.section-heading-spacer{float:left;width:200px;border-top:4px solid #E7801D}.banner{padding:100px 0;text-align:center;color:#eeebec;background:url(../img/unsplash4.png) no-repeat center center;background-size:cover}.banner h2{margin:0;text-shadow:2px 2px 3px rgba(64,52,56,0.7);font-size:3em;color:#F7941E}.banner ul{margin-bottom:0}.banner-social-buttons{float:right;margin-top:0}footer{padding:50px 0;background-color:#181512}footer .list-inline{text-align:center}footer .recognition ul{list-style-type:none}footer .recognition ul .multi:before{font-family:FontAwesome;content:"\f219";color:#E7801D;position:absolute;left:26px}footer .recognition ul li:not(.multi):before{font-family:FontAwesome;content:"";color:#E7801D;position:absolute;left:26px}footer .recognition h3,footer .recognition p,footer .recognition li{color:#f0eeeb}footer .recognition p{font-size:16px}footer .recognition .message{padding:0 15px}footer .legend{margin-top:20px;margin-left:35px}footer .legend p{color:#e5e1dc;font-size:14px;font-style:italic}footer .legend p .fa{color:#E7801D}.copyright{margin:15px 0 0;text-align:center}@media (min-width: 1200px){footer .recognition .message{border-right:1px solid #462703;padding:10% 30px 10% 15px}}@media (max-width: 767px){.navbar-brand{font-weight:700;font-size:24px;padding-top:10px;width:140px}.navbar-brand:not(.logomark){line-height:1.1}.navbar-brand .logomark{width:54px;padding:6px 0}.intro-message>h1{font-size:3em}.intro-message>h3{padding:0}.banner h2{margin:0;text-shadow:2px 2px 3px rgba(64,52,56,0.7);font-size:3em}.banner-social-buttons>li{display:block;margin-bottom:20px;padding:0}.banner-social-buttons>li:last-child{margin-bottom:0}.section-heading-spacer{display:none}.levels{margin-top:30px}}
