--- a/src/scss/init.scss
+++ b/src/scss/init.scss
@@ -1,3 +1,61 @@
-@import '_global';
-@import '_variables';
-@import 'styles';
+// **************************************************************************
+//
+// INIT
+//
+// 01. Settings
+// 02. Fonts
+// 03. Global
+// 04. Components
+//
+// **************************************************************************
+
+// **************************************************************************
+//
+// 01. Settings
+//
+// Settings all come first as they may override other variables or are needed
+// globally in other styles.
+//
+// **************************************************************************
+
+@import 'settings';
+
+// **************************************************************************
+//
+// 02. Fonts
+//
+// Any locally included fonts go before they are called in other rules.
+//
+// **************************************************************************
+
+@import 'fonts/aller';
+
+// **************************************************************************
+//
+// 03. Global
+//
+// Globally affected styles that override Bootstrap or browser defaults.
+//
+// **************************************************************************
+
+@import 'global/global';
+@import 'global/typography';
+@import 'global/btn';
+
+// **************************************************************************
+//
+// 04. Components
+//
+// Namespaced and self-contained components.
+//
+// **************************************************************************
+
+@import 'components/main-navigation';
+@import 'components/hero';
+@import 'components/contact-banner';
+@import 'components/footer';
+@import 'components/sponsorship-levels';
+@import 'components/speaker-list';
+@import 'components/section';
+@import 'components/image-frame';
+@import 'components/social-media-list';
