Added Snipcart includes.

--- a/src/templates/_includes/footer.html
+++ b/src/templates/_includes/footer.html
@@ -78,6 +78,7 @@
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"></script>
+    <script src="https://cdn.snipcart.com/scripts/2.0/snipcart.js" data-api-key="MWM5N2YyNDMtNzBmNS00ZGM1LWIzNjAtMzRkOGJjYzk2OGRkNjM2NDQ0OTE2NjY4MjkxNTY3" id="snipcart"></script>
     <script src="/assets/js/vendor.min.js"></script>
     <script src="/assets/js/twp.min.js"></script>
   </body>
