--- a/src/templates/_includes/header.html
+++ b/src/templates/_includes/header.html
@@ -56,6 +56,7 @@
     <!-- Remote CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
+    <link rel="stylesheet" href="https://cdn.snipcart.com/themes/2.0/base/snipcart.min.css" />
 
     <!-- Local CSS -->
     <link rel="stylesheet"  href="/assets/css/twp.min.css" />
