Fixed issues on mobile, reenabled linting for all css files, and added the sponsorship table.

--- a/src/scss/components/contact-banner.scss
+++ b/src/scss/components/contact-banner.scss
@@ -1,5 +1,7 @@
-.contact-banner .btn-meetup {
-  margin-right: 2rem;
+@media (min-width: #{map-get($breakpoints, md)}) {
+  .contact-banner .btn-meetup {
+    margin-right: 2rem;
+  }
 }
 
 .contact-banner .btn {
