--- a/src/scss/components/main-navigation.scss
+++ b/src/scss/components/main-navigation.scss
@@ -4,7 +4,7 @@
   min-height: $main-navigation-height;
   background-color: $white;
   padding: 1rem;
-  box-shadow: 0 .2rem .35rem 0 rgba(0, 0, 0, 0.2);
+  box-shadow: 0 .2rem .35rem 0 rgba($black, .2);
 }
 
 @media (min-width: #{map-get($breakpoints, lg)}) {
