--- a/src/scss/components/section.scss
+++ b/src/scss/components/section.scss
@@ -10,7 +10,7 @@
 .section-tertiary {
   padding: 5rem 0;
   color: $white;
-  background: url("../img/backgrounds/honeycomb.svg"), linear-gradient(45deg, $orange 0%, $purple 100%);
+  background: url('../img/backgrounds/honeycomb.svg'), linear-gradient(45deg, $orange 0%, $purple 100%);
 }
 
 .section-heading {
