--- a/src/scss/init.scss
+++ b/src/scss/init.scss
@@ -55,7 +55,9 @@
 @import 'components/contact-banner';
 @import 'components/footer';
 @import 'components/sponsorship-levels';
+@import 'components/pricing-table';
 @import 'components/speaker-list';
 @import 'components/section';
 @import 'components/image-frame';
 @import 'components/social-media-list';
+@import 'components/page-header';
