--- a/src/templates/_includes/footer.html
+++ b/src/templates/_includes/footer.html
@@ -1,6 +1,6 @@
     <div class="section-tertiary text-center contact-banner" id="contact">
       <a class="btn btn-light btn-lg btn-meetup" target="_blank" href="{{site.data.contact.meetup}}">
-        Join & See Events on
+        Join & RSVP on
         <img class="btn-meetup-logo" src="/assets/img/logos/meetup.svg" alt="Meetup" />
       </a>
       <a class="btn btn-outline-light btn-lg" href="/become-a-sponsor/">Become a Sponsor</a>
