--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -14,7 +14,7 @@ homepage: true
       in Toledo.
     </h3>
     <a class="btn btn-light btn-lg btn-meetup" target="_blank" href="{{site.data.contact.meetup}}">
-      Join & See Events on
+      Join & RSVP on
       <img class="btn-meetup-logo" src="/assets/img/logos/meetup.svg" alt="Meetup" />
     </a>
     <a class="btn btn-outline-light btn-lg" href="/become-a-sponsor/">Become a Sponsor</a>
@@ -54,7 +54,7 @@ homepage: true
 <div class="section-primary" id="about">
   <div class="container">
     <div class="row justify-content-between">
-      <div class="col-lg-5 col-sm-6">
+      <div class="col-lg-5 col-md-6">
         <h3 class="section-heading">We bring learners, professionals, and businesses together.</h3>
         <h6 class="text-secondary">Toledo is our Mission</h6>
         <p>
@@ -72,7 +72,7 @@ homepage: true
           order to provide the best events possible, we depend on our gracious <a href="#sponsors">sponsors</a>.
         </p>
       </div>
-      <figure class="col-lg-5 col-sm-6 image-frame">
+      <figure class="col-lg-5 col-md-6 image-frame">
         <a class="image-frame-image" target="_blank" href="/assets/img/meetups/googz.jpg">
           <img class="img-fluid" src="/assets/img/meetups/googz.jpg" alt="Rita DeRaedt: Design at the Googz" />
         </a>
